--- a/hyper_ed_net_tuner.ipynb
+++ b/hyper_ed_net_tuner.ipynb
@@ -20,7 +20,7 @@
     "import json\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "# Use this or tf random seed for train ds in singe expriment\n",
+    "# Use this or tf random seed for train ds in single expiriment\n",
     "np.random.seed(42)"
    ]
   },
@@ -161,7 +161,7 @@
     "\n",
     "def build_model(hp):\n",
     "    \n",
-    "    # defauls optimals\n",
+    "    # default optimals..\n",
     "    \n",
     "    n_branches = 64 \n",
     "    lstm_units = 32\n",
