--- a/hyper_ed_net_tuner.ipynb
+++ b/hyper_ed_net_tuner.ipynb
@@ -352,7 +352,7 @@
     "convs_weights = temp_l\n",
     "\n",
     "interpret_patterns = get_spatial_patterns(\n",
-    "    np.copy(X_test[10000:510000, :]),\n",
+    "    np.copy(X[int(Y.shape[0]*split), :]),\n",
     "    convs_weights,\n",
     "    np.repeat(np.copy(spat_l[0]), 1, axis=1),\n",
     "    ).reshape(X_train.shape[1], HIDDEN_CHANNELS, 1)\n",
